@@ -1,3 +1,9 @@
+2000-04-07  Nick Clifton  <nickc@cygnus.com>
+
+	* arm-oabi.h: Delete.
+	* arm.h: Merge in definitions of old reloc numbers from
+	arm-oabi.h.
+
 2000-04-06  Nick Clifton  <nickc@cygnus.com>
 
 	* arm.h (EF_ARM_SYMSARESORTED): Define.
